--- a/index.html
+++ b/index.html
@@ -2,9 +2,13 @@
 <html>
 	<head>
 		<meta charset="utf-8" />
+		<link rel="stylesheet" href="index.css">
+		<script type="module" src="./bootstrapper.js"></script>
 	</head>
 
 	<body>
-		<h1>Title</h1>
+		<div class="content">
+		<h1>Get Swifty</h1>
+		</div>
 	</body>
 </html>
