--- a/index.html
+++ b/index.html
@@ -8,7 +8,15 @@
 
 	<body>
 		<div class="content">
-		<h1>Get Swifty</h1>
+			<h1>Get Swifty</h1>
+			<div class="board-content"></div>
+			<form id="reset-game-form">
+				<div>
+					<label for="size">Size: </label>
+					<input name="size" type="text"></input>
+				</div>
+					<button type="submit">Reset</input>
+			</form>
 		</div>
 	</body>
 </html>
