--- a/index.html
+++ b/index.html
@@ -12,11 +12,21 @@
 			<div class="board-content"></div>
 			<form id="reset-game-form">
 				<div>
-					<label for="size">Size: </label>
-					<input name="size" type="text"></input>
+
+					<h3>Reset Game:</h3>
 				</div>
-					<button type="submit">Reset</input>
+				<div class="reset-game-form-content">
+					<div>
+						<label for="size">Size: </label>
+						<input name="size" type="text"></input>
+					</div>
+					<button type="submit">Reset</button>
+				</div>
 			</form>
+			<div class="leaderboard">
+				<h2>Leader Board</h2>
+				<div class="leaderboard-content"></div>
+			</div>
 		</div>
 	</body>
 </html>
