Added diffrent leaderboards per level

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 				<div class="reset-game-form-content">
 					<div>
 						<label for="size">Size: </label>
-						<input name="size" type="text"></input>
+						<input name="size" type="text" placeholder="3"></input>
 					</div>
 					<button type="submit">Reset</button>
 				</div>
