--- a/index.html
+++ b/index.html
@@ -10,17 +10,27 @@
 		<div class="content">
 			<h1>Get Swifty</h1>
 			<div class="board-content"></div>
-			<form id="reset-game-form">
+			<form id="reset-game-form" class="reset-game form">
 				<div>
-
 					<h3>Reset Game:</h3>
 				</div>
-				<div class="reset-game-form-content">
+				<div class="reset-game form-content">
 					<div>
 						<label for="size">Size: </label>
-						<input name="size" type="text" placeholder="3"></input>
+						<input name="size" type="text" value="3"></input>
 					</div>
 					<button type="submit">Reset</button>
+				</div>
+			</form>
+			<form id="choose-image-form" class="chhose-image form">
+				<div>
+					<h3>Choose Image:</h3>
+				</div>
+				<div class="choose-image form-content">
+					<div>
+						<input name="image" type="file" accept="image/*"></input>
+					</div>
+					<button type="submit">Update Board</button>
 				</div>
 			</form>
 			<div class="leaderboard">
