Added checking that the board isnt already solved

--- a/index.html
+++ b/index.html
@@ -22,17 +22,10 @@
 					<button type="submit">Reset</button>
 				</div>
 			</form>
-			<form id="choose-image-form" class="chhose-image form">
-				<div>
+			<div class="choose-image">
 					<h3>Choose Image:</h3>
-				</div>
-				<div class="choose-image form-content">
-					<div>
-						<input name="image" type="file" accept="image/*"></input>
-					</div>
-					<button type="submit">Update Board</button>
-				</div>
-			</form>
+					<input id="choose-image-input" name="image" type="file" accept="image/*"></input>
+			</div>
 			<div class="leaderboard">
 				<h2>Leader Board</h2>
 				<div class="leaderboard-content"></div>
