--- a/index.html
+++ b/index.html
@@ -1,35 +1,38 @@
 <!DOCTYPE html>
 <html>
-	<head>
-		<meta charset="utf-8" />
-		<link rel="stylesheet" href="index.css">
-		<script type="module" src="./bootstrapper.js"></script>
-	</head>
 
-	<body>
-		<div class="content">
-			<h1>Get Swifty</h1>
-			<div class="board-content"></div>
-			<form id="reset-game-form" class="reset-game form">
+<head>
+	<meta charset="utf-8" />
+	<link rel="stylesheet" href="index.css">
+	<script type="module" src="bootstrapper.js"></script>
+</head>
+
+<body>
+	<canvas class="confetti" id="canvas"></canvas>
+	<div class="content">
+		<h1>Get Swifty</h1>
+		<div class="board-content"></div>
+		<form id="reset-game-form" class="reset-game form">
+			<div>
+				<h3>Reset Game:</h3>
+			</div>
+			<div class="reset-game form-content">
 				<div>
-					<h3>Reset Game:</h3>
+					<label for="size">Size: </label>
+					<input name="size" type="text" value="3"></input>
 				</div>
-				<div class="reset-game form-content">
-					<div>
-						<label for="size">Size: </label>
-						<input name="size" type="text" value="3"></input>
-					</div>
-					<button type="submit">Reset</button>
-				</div>
-			</form>
-			<div class="choose-image">
-					<h3>Choose Image:</h3>
-					<input id="choose-image-input" name="image" type="file" accept="image/*"></input>
+				<button type="submit">Reset</button>
 			</div>
-			<div class="leaderboard">
-				<h2>Leader Board</h2>
-				<div class="leaderboard-content"></div>
-			</div>
+		</form>
+		<div class="choose-image">
+			<h3>Choose Image:</h3>
+			<input id="choose-image-input" name="image" type="file" accept="image/*"></input>
 		</div>
-	</body>
+		<div class="leaderboard">
+			<h2>Leader Board</h2>
+			<div class="leaderboard-content"></div>
+		</div>
+	</div>
+</body>
+
 </html>
